# alpha

./: .gitignore  CHANGELOG.md  DEVGUIDE.md  LICENSE  README.md  alpha.cabal
.github/workflows/: ci.yml
app/: Main.hs
src/Alpha/: CLI.hs  Data.hs  Engine.hs  Metrics.hs  Strategy.hs  Types.hs
src/Alpha/Strategy/: BuyHold.hs  Helpers.hs  Momentum.hs
test/: Main.hs  TestHelpers.hs
test/Alpha/: CLISpec.hs  DataSpec.hs  EdgeCasesSpec.hs  EngineSpec.hs  MetricsSpec.hs  StrategySpec.hs  TypesSpec.hs
test/fixtures/: sample.csv
test/golden/: equity.csv  metrics.json
